--- a/PS2.ipynb
+++ b/PS2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR NAME\n",
+    "Logan Becker\n",
     " - Collaborator 1\n",
     " - Collaborator 2\n",
     " - etc"
@@ -47,7 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importing packages \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, LabelEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''your code here. add cells as needed'''"
+    "'''your code here. add cells as needed'''\n",
+    "#Odinal deatures = gill spacing, gill size, bruises, ring number, stalk shape, population "
    ]
   },
   {
@@ -162,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
